--- a/Login/style_mobile.css
+++ b/Login/style_mobile.css
@@ -18,6 +18,7 @@ body
 
     width:100%;
     height:fit-content;
+    
     position: relative;
     background: rgb(2,0,36);
     background: linear-gradient(135deg, rgba(2,0,36,1) 0%, rgba(17,0,100,1) 21%, rgba(25,7,118,1) 41%, rgba(45,25,143,1) 62%, rgba(201,57,104,1) 100%);
@@ -199,728 +200,265 @@ nav
 
 
 
-.cryptoPrices
-{
-    width:100%;
-    height:40px;
-    background:rgba(255, 255, 255, 0.11);
-    margin-top:20px;
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    
-}
 
-.landing-description-container
-{
 
-    width:100%;
-    height: fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content:center;
-    
-}
 
-.landing-description-container img 
-{
-    width:300px;
-    height:300px;
-}
 
-.landing-text 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.container
 {
     width:100%;
     height:fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: column;
+    position:relative; 
+    display: flex;
+    flex-direction:column;
     align-items: center;
     justify-content: center;
+    padding-top:50px;
 }
 
-h1 
+.image 
 {
-    font-size:35px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color:rgba(255, 255, 255, 0.705);
-    text-align: center;
-    letter-spacing: 1px;
-    width: 100%;
-    margin:20px 0px;
-    
+  display:none;
 }
 
-p1
-{
-    font-size:18px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    color:rgba(255, 255, 255, 0.705);
-    text-align: center;
-    letter-spacing: 1px;
-    width:100%;
-
-}
-
-.start 
-{
-    width:200px;
-    height:60px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    position:relative;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    color:rgba(255, 255, 255, 0.747);
-    font-size: 25px;
-    font-size:400;
-    border:none;
-    border-radius:50px;
-    background: rgb(74,21,181);
-background: linear-gradient(135deg, rgba(74,21,181,1) 0%, rgba(159,18,18,1) 100%);
-margin:30px 0px;
-transition:opacity 0.4s;
-
-}
-
-.start:hover 
-{
-    opacity:0.7;
-    transition:0.4s;
-    cursor: pointer;
-}
-
-
-
-
-
-.small-market-container 
+.login-container
 {
     width:100%;
     height:fit-content;
     background:white;
-    position:relative;
     display:flex;
-    flex-direction: column-reverse;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.about-img
-{
-    display:none;
-}
-
-.market-container
-{
-    width:100%;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.btc-holder
-{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-}
-
-p2, p3 
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:40px;
-    color:rgba(0, 0, 0, 0.795);
-    font-weight: 500;
-    margin:20px 0px;
-}
-
-.crypto 
-{
-    width:70vw;
-    height:40px;
-    border:1px solid rgba(0, 0, 0, 0.349);
-    border-radius:50px;
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.crypto .currency
-{
-    width:40px;
-    height:40px;
-    position:absolute;
-    left:25px;
-}
-
-.crypto p 
-{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:25px;
-    color:rgba(0, 0, 0, 0.795);
-    font-weight: 200;
-}
-
-.crypto .roll-down 
-{
-    width:30px;
-    height:30px;
-    position: absolute;
-    right: 25px;
-    transition:opacity 0.3s;
-}
-
-.crypto .roll-down:hover 
-{
-    cursor: pointer;
-    animation:roll-down-animation 0.6s ease-in-out infinite;
-    opacity:0.3s;
-
-    
-}
-
-@keyframes roll-down-animation 
-{
-    0%{transform:translateY(0px);}
-    50%{transform:translateY(5px);}
-    100%{transform:translateY(0px);}
-}
-
-.value 
-{
-    width:70vw;
-    height:50px;
-    border:1px solid rgba(0, 0, 0, 0.493);
-    border-radius:50px;
-    padding:0px 15px;
-    font-size:20px;
-    color:black;
-    font-weight: 200;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin-top:25px;
-}
-
-.price-holder 
-{
-    background: rgb(143,18,101);
-    background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
-    width:70vw;
-    height:50px;
-    border-radius:50px;
-    color:white;
-    font-size:20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin:20px 0px;
-}
-
-.continue 
-{
-    background: rgb(143,18,101);
-    background: linear-gradient(90deg, rgba(143,18,101,1) 0%, rgba(41,37,155,1) 100%); 
-    width:50vw;
-    height:40px;
-    border:none;
-    border-radius:50px;
-    color:white;
-    font-size:20px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin:30px 0px;
-    transition:0.4s;
-    -webkit-box-shadow: 0px 7px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 7px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 7px 5px 0px rgba(50, 50, 50, 0.75);
-}
-
-.continue:hover 
-{
-    opacity:0.9;
-    transition:0.4s;
-    cursor: pointer;
-    transform:translateY(-8px);
-    -webkit-box-shadow: 0px 15px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 15px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 15px 5px 0px rgba(50, 50, 50, 0.75);
-}
-
-p4 
-{
-    font-size:15px;
-    color:black;
-    letter-spacing: 1px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
-    margin-bottom:50px;
-}
-
-p4 a 
-{
-    color:black;
-
-}
-
-
-
-.wave-1 
-{
-    display:none;
-}
-
-.wave-1 img 
-{
-    margin:0;
-}
-
-.about-us 
-{
-    width:100%;
-    height:fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    background: rgb(14,10,109);
-    background: linear-gradient(180deg, rgba(14,10,109,1) 0%, rgba(99,0,46,1) 100%); 
-}
-
-.text-about-us 
-{
-    width:100%;
-
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-
-}
-
-h2
-{
-    font-size:25px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 100;
-    color:rgba(255, 255, 255, 0.952);
-    text-align: center;
-    letter-spacing: 1px;
-    margin-top:50px;
-
-}
-
-p5
-{
-    font-size:16px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 100;
-    color:rgba(255, 255, 255, 0.788);
-    text-align: center;
-    letter-spacing: 1px;
-    margin-top:30px;
-
-}
-
-.about-us img 
-{
-   display:none;
-}
-
-.text-about-us button 
-{
-    width:60vw;
-    padding:7px 10px;
-    color:white;
-    background:transparent;
-    border:2px solid white;
-    border-radius:50px;
-    font-size:25px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
-    margin:50px 0px;
-    transition:opacity 0.4s;
-    
-}
-
-.text-about-us button:hover 
-{
-    opacity:0.7;
-    transition:0.4s;
-    cursor: pointer;
-}
-
-
-.help 
-{
-    width:100%;
-    height:fit-content;
-    background:white;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: flex-start;
-
-}
-
-h3 
-{
-    font-size:30px;
-    font-weight: 100;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color:#080558;
-    margin-top:50px;
-
-}
-
-.card-container 
-{
-    width:100%;
-    height:fit-content;
-    margin-top:30px;
+    flex-direction:column;
     position: relative;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
+
 }
 
-
-.card 
+.info 
 {
-
-    background: rgb(133,97,218);
-    background: linear-gradient(180deg, rgba(133,97,218,1) 0%, rgba(205,63,63,1) 100%); 
-    width:70vw;
+    width:100%;
+    position:relative;
     height:fit-content;
-    margin:30px 0px;
-    border-radius:30px;
-    position: relative;
+    background: rgb(77,23,103);
+    background: linear-gradient(90deg, rgba(77,23,103,1) 0%, rgba(37,63,164,1) 100%); 
     display:flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding:30px 0px;
-    -webkit-box-shadow: 0px 8px 5px 0px rgba(50, 50, 50, 0.75);
--moz-box-shadow:    0px 8px 5px 0px rgba(50, 50, 50, 0.75);
-box-shadow:         0px 8px 5px 0px rgba(50, 50, 50, 0.75);
-}
-
-p6 
-{
-    font-size:17px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 500;
-    text-align:center;
-    letter-spacing: 1px;
-    color:white;
-    width:60%;
-}
-
-.card button 
-{
-    
-  
-    font-size:25px;
-    color:white;
-    background:rgba(255, 255, 255, 0.493);
-    border:none;
-    border-radius:50px;
-    padding:10px 20px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    margin-top:40px;
-    transition:opacity 0.4s;
-}
-
-.card button:hover 
-{
-    opacity:0.7;
-    cursor: pointer;
-    transition:0.4s;
-}
-
-.description-container 
-{
-    width:100%;
-    height:fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
 
 }
 
 .description 
 {
-    width:fit-content;
+    width:100%;
     height:fit-content;
-    margin:30px 80px;
-    position:relative;
-    display:flex;
+    position: relative;
+    display:none;
     flex-direction: column;
     align-items: center;
-    justify-content: flex-start;
+    justify-content:flex-start;
+    margin-top:10px;
     
 }
 
-#time 
+.description-active
 {
-    width:90px;
-    height:90px;
-    opacity:0.7;
+    display:flex;
 }
 
-#curr 
+.description img 
 {
-    width:90px;
-    height:90px;
-    opacity:0.7;
+    width: 45px;
+    height:60px;
+}
+.payment-img 
+{
+    width:60px;
+    height:50px;
 }
 
-#btc-worek
+.imgg 
 {
-    width:70px;
-    height:70px;
-    opacity:0.7;
+    width:60px;
+    height:60px;
 }
 
-p7 
+h1 
 {
-    font-size:25px;
-    font-weight: 300;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    width:100%;
-    line-height: 30px;
-    margin-top:20px;
+    font-size:20px;
+    color:rgb(255, 255, 255);
+    font-weight: 500;
+    margin:10px 0px;
     text-align: center;
 }
 
 
-footer 
+p1 
 {
-    width:100%;
-    height:fit-content;
-    position:relative;
-padding:50px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: rgb(14,10,109);
-    background: linear-gradient(180deg, rgba(14,10,109,1) 0%, rgba(99,0,46,1) 100%); 
-}
-
-.sign-up-container 
-{
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width:fit-content;
-    height:fit-content;
-    margin:0px 0px;
-
-
-}
-
-.sign-up-footer, .sign-in-footer 
-{
-    color:white;
-    border:2px solid white;
-    background:rgba(255, 255, 255, 0.39);
-    border-radius:50px;
-    font-size:20px;
-    padding:8px 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:16px;
+    color:rgb(255, 255, 255);
+    font-weight: 500;
     margin:10px 0px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 400;
-    transition:opacity .4s;
-}
-
-.sign-up-footer:hover, .sign-in-footer:hover 
-{
-    opacity:0.7;
-    cursor: pointer;
-    transition:.4s;
-}
-
-
-h4 
-{
-    color:white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:30px;
-    font-weight: 400;
-    margin:20px 0px;
-}
-
-
-.links-footer-container 
-{
-    height:fit-content;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:20px 0px;
-
-}
-
-
-
-
-h5 
-{
-    color:rgba(255, 255, 255, 0.603);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:30px;
-    font-weight: 400;
-    margin:5px 0px;
-}
-
-.footer-link 
-{
-    color:rgba(255, 255, 255, 0.774);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size:20px;
-    font-weight: 400;
-    text-decoration: none;
-    margin:5px 0px;
-}
-
-footer hr 
-{
+    text-align: center;
     width:90%;
-    height:2px;
-    border:none;
-    background:rgba(255, 255, 255, 0.514);
+}
+
+
+.learn-more
+{
+    font-size:16px;
+    font-weight: 500;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    text-decoration: underline;
+    color:white;
     margin:10px 0px;
 }
 
-.lower-menu 
+
+
+
+.dots 
 {
     width:100%;
     height:fit-content;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-
-.social-container 
-{
-    width:70px;
-    height:70px;
-    border-radius:100%;
-    border:3px solid white;
-    background:transparent;
-    background-image: url("images/twitter-logo-white-png.png");
-    background-size:95%;
-    background-repeat: no-repeat;
-    background-position: center;
-    margin:20px 0px;
-}
-
-.social-container:nth-child(2)
-{
-    background-image: url("images/SMA-Facebook.png");
-}
-
-.social-container:nth-child(3)
-{
-    background-image: url("images/linkedIn_logo_circle.png");
-}
-
-
-.policy-container 
-{
-    width:fit-content;
-    height:fit-content;
-    position:relative;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin:0px 20px;
-}
-
-.policy-link 
-{
-    color:white;
-    text-decoration: underline;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
-    font-size:20px;
-    margin:10px 0px;
-}
-
-.policy-link:nth-child(1)
-{
-    text-decoration: none;
-}
-
-.language 
-{
-    width:fit-content;
-    background:rgba(255, 255, 255, 0.459);
-    border-radius:50px;
-    border:none;
-    font-size:15px;
-    color:white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-weight: 300;
-    padding:10px 20px;
+    margin:30px 0px;
+    position: relative;
     display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+}
+
+.dot 
+{
+    width:12px;
+    height:12px; 
+    background:white;
+    border:none;
+    border-radius:100%;
+    margin:0px 15px;
+}
+
+.dot:hover 
+{
+    cursor: pointer;
+}
+
+.dot-active 
+{
+    background:#EE00AE;
+}
+
+
+
+
+
+
+
+
+
+
+form 
+{
+    width:100%;
+    height:fit-content;
+    background:white;
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-bottom:40px;
+}
+
+h2 
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:22px;
+    color:black;
+    font-weight: 500;
+    margin:10px 0px 20px 0px;
+}
+
+label 
+{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size:16px;
+    color:rgba(0, 0, 0, 0.651);
+    font-weight: 500;
+    margin:0px 0px;
+}
+
+.text-input 
+{
+    width:80%;
+    margin:10px 0px;
+    font-size:17px;
+    color:rgba(0, 0, 0, 0.767);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    border:none;
+    border-radius:50px;
+}
+
+.underline 
+{
+    width:80%;
+    margin:2px 0px 10px 0px;
+    background: rgb(228,45,89);
+    background: linear-gradient(90deg, rgba(228,45,89,1) 0%, rgba(55,63,177,1) 100%); 
+    height:2px;
+    border-radius:50px;
+}
+
+.submit 
+{
+    font-size:20px;
+    color:white;
+    background: rgb(228,45,89);
+    background: linear-gradient(90deg, rgba(228,45,89,1) 0%, rgba(55,63,177,1) 100%); 
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    border:none;
+    padding:5px 20px;
+    margin:10px 0px 20px 0px;
+    border-radius:25px;
+    align-self: center;
+    justify-self: center;
     transition:opacity 0.4s;
-    margin:20px 0px;
 }
 
-p8
-{
-    font-weight:500;
-}
-
-.down-arrow-white 
-{
-    height:25px;
-    width: 25px;
-    margin:0px 10px 0px 10px;
-}
-
-.language:hover 
-{
+.submit:hover{
     cursor: pointer;
     opacity:0.7;
     transition:0.4s;
+}
+
+form a 
+{
+    font-size: 15px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 500;
+    color:rgb(6, 93, 223);
+    text-decoration: underline;
+    align-self: center;
+    justify-self: center;
+    margin:5px 0px;
 }
